--- a/src/app/App.css
+++ b/src/app/App.css
@@ -3,8 +3,12 @@
 #root,body{
     margin: 0 auto;
     max-width: 1440px;
+    font-family: Ubuntu;
 }
-
-.wrapper{
-
+.logo{
+    width: 129px;
+    max-width: 100%;
+    height: 29px;
+    max-height: 100%;
+    align-self:flex-start;
 }
