--- a/src/pages/RegistrationPage/RegistrationForm/RegistrationForm.module.css
+++ b/src/pages/RegistrationPage/RegistrationForm/RegistrationForm.module.css
@@ -1,22 +1,55 @@
-.formFieldWrap{
+.formContainer{
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    width: 527px;
+    height: 496px;
+    padding-right: 59px;
+    padding-left: 39px;
+    padding-top: 24px;
+    padding-bottom: 19px;
+    margin: 10px;
+    box-shadow: 0px 4px 24px rgba(0, 0, 0, 0.14);
+    border-radius: 15px;
 
+}
+.logo{
+    align-self: center;
+    margin-bottom: 21px;
+}
+.formButton {
+    font-family: Ubuntu;
+    font-size: 16px;
+    font-weight: 500;
+    color: #FFFFFF;
+    padding: 6px 34.5px 6px 34.5px;
+    background: #7E5BC2;
+    border-radius: 10px;
+    border: 1px solid #7E5BC2;
+    width: max-content;
+    height: auto;
+    outline: none;
+    cursor: pointer;
+    align-self: center;
+    margin-top: 33px;
+}
+.formButton:hover{
+    color: #FFFFFF;
+    border: 1px solid #6939c6;
 }
 .formWrap{
     display: flex;
     flex-direction: column;
 }
-.MuiTextField-root.inputStyle{
-    border: 1px solid #E4DFDC;
-    border-radius: 100px;
-    width: 231px;
-    height: 10px !important;
+.textLogin{
+    align-self: center;
+    font-family: 'Ubuntu';
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 14px;
+    margin-top: 16px;
+    color: #5A5A5A;
 }
-/*.inputStyle:hover{*/
-/*    border: 1px solid #b6b3b3;*/
-/*}*/
-/*.inputStyle:focus{*/
-/*    border: 1px solid #b6b3b3;*/
-/*}*/
-/*.inputStyle{*/
-/*    border: 1px solid #b6b3b3;*/
-/*}*/
+.textLogin>a{
+    color:#2D4EC2;
+}
