--- a/src/pages/RegistrationPage/RegistrationForm/RegistrationForm.module.css
+++ b/src/pages/RegistrationPage/RegistrationForm/RegistrationForm.module.css
@@ -11,7 +11,7 @@
     margin: 10px;
     box-shadow: 0px 4px 24px rgba(0, 0, 0, 0.14);
     border-radius: 15px;
-
+    background-color: #FFFFFF;
 }
 .logo{
     align-self: center;
