--- a/src/components/FilterList/FilterItem.module.css
+++ b/src/components/FilterList/FilterItem.module.css
@@ -5,14 +5,13 @@
     font-size: 16px;
     line-height: 18px;
     padding-left: 35px;
-    margin-bottom: 12px;
+    padding-top: 2px;
+    margin-bottom: 14px;
     cursor: pointer;
-    font-size: 22px;
     -webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
-
 }
 
 /* Hide the browser's default checkbox */
