--- a/src/pages/NewsPage/NewsPage.module.css
+++ b/src/pages/NewsPage/NewsPage.module.css
@@ -1,4 +1,10 @@
 .newsContentWrap{
+margin-left: calc((127%/1440)*100);;
+}
+.wrapper{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
     padding-left: calc((150%/1440)*100);
     padding-right: calc((150%/1440)*100);
     padding-top: 34px;
