--- a/src/app/App.css
+++ b/src/app/App.css
@@ -12,3 +12,7 @@
     max-height: 100%;
     align-self:flex-start;
 }
+.contentWrap{
+    padding-left: calc((150%/1440)*100);
+    padding-right: calc((150%/1440)*100);
+}
