--- a/src/components/NewsItem/NewsItem.module.css
+++ b/src/components/NewsItem/NewsItem.module.css
@@ -5,6 +5,7 @@
     margin: 0 auto;
     /*width: calc((845%/1440)*100);*/
     width: 100%;
+
 }
 .imgContainer{
     position: relative;
@@ -67,4 +68,16 @@
     padding-bottom: 16px;
     margin-bottom: 16px;
     border-bottom: 1px solid #D9D9D9;
+}
+.like{
+    width: 21px;
+    height: 18px;
+}
+.wrapper{
+    display: flex;
+    flex-direction: column;
+}
+.contentContainerFull{
+    display: flex;
+    flex-direction: column;
 }
