--- a/src/components/NewsItem/NewsItem.module.css
+++ b/src/components/NewsItem/NewsItem.module.css
@@ -94,9 +94,12 @@
     display: flex;
     flex-direction: column;
     padding-top: 24px;
-    margin-bottom: 104px;
+    margin-bottom: 56px;
 }
 .contentContainerFull{
     display: flex;
     flex-direction: column;
+}
+.commentButton{
+
 }
