--- a/src/components/Input/Input.module.css
+++ b/src/components/Input/Input.module.css
@@ -3,10 +3,12 @@
     justify-content: space-between;
     margin-top: 10px;
     margin-bottom: 10px;
+    width: 100%;
 }
 .inputWrap{
     display: flex;
     flex-direction: column;
+    width: 100%;
 }
 
 .inputWrap > span{
@@ -14,7 +16,7 @@
 }
 .inputStyle {
     box-sizing: border-box;
-    width: 231px;
+    width: 100%;
     height: 39px;
     border: 1px solid #E4DFDC;
     border-radius: 10px;
