--- a/src/pages/LoginPage/LoginForm/LoginForm.module.css
+++ b/src/pages/LoginPage/LoginForm/LoginForm.module.css
@@ -56,3 +56,14 @@
 .textLogin>a{
     color:#2D4EC2;
 }
+.formFieldWrap{
+    display: flex;
+    justify-content: space-between;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    width: 100%;
+}
+.inputContainer{
+    width: 100%;
+    max-width: 231px;
+}
