--- a/src/pages/RegistrationPage/RegistrationForm/RegistrationForm.module.css
+++ b/src/pages/RegistrationPage/RegistrationForm/RegistrationForm.module.css
@@ -13,6 +13,13 @@
     border-radius: 15px;
     background-color: #FFFFFF;
 }
+.formFieldWrap{
+    display: flex;
+    justify-content: space-between;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    width: 100%;
+}
 .logo{
     align-self: center;
     margin-bottom: 21px;
@@ -52,4 +59,8 @@
 }
 .textLogin>a{
     color:#2D4EC2;
+}
+.inputContainer{
+    width: 100%;
+    max-width: 231px;
 }
