--- a/src/pages/LoginPage/LoginForm/LoginForm.module.css
+++ b/src/pages/LoginPage/LoginForm/LoginForm.module.css
@@ -67,3 +67,10 @@
     width: 100%;
     max-width: 231px;
 }
+.buttonContainer{
+    width: 100%;
+    max-width: 168px;
+    height: 30px;
+    margin-top: 33px;
+    align-self: center;
+}
