--- a/src/components/Input/Input.module.css
+++ b/src/components/Input/Input.module.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     width: 100%;
+    height: inherit;
 }
 
 .inputWrap > span{
@@ -14,6 +15,7 @@
     border: 1px solid #E4DFDC;
     border-radius: 10px;
     outline: none;
+    padding-left: 18px;
 }
 .inputStyleError {
     border: 1px solid #ff3131;
