--- a/src/components/Input/Input.module.css
+++ b/src/components/Input/Input.module.css
@@ -1,17 +1,17 @@
 .inputWrap{
     display: flex;
     flex-direction: column;
-    width: 100%;
+    width: auto;
     height: 100%;
+    max-height: 39px;
 }
-
 .inputWrap > span{
     align-self: start;
 }
 .inputStyle {
     box-sizing: border-box;
-    width: 100%;
-    height: 100%;
+    width: auto;
+    height: inherit;
     border: 1px solid #E4DFDC;
     border-radius: 10px;
     outline: none;
@@ -33,9 +33,4 @@ label{
 .subSpan{
     font-size: 12px;
     color: #5A5A5A;
-}
-.textarea{
-    resize: none;
-   min-height: 34px;
-
 }
