--- a/src/components/Textarea/Textarea.module.css
+++ b/src/components/Textarea/Textarea.module.css
@@ -1,21 +1,25 @@
-.inputWrap{
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    height: 100%;
-}
-
-.inputWrap > span{
-    align-self: start;
-}
-.inputStyle {
+.textarea {
     box-sizing: border-box;
-    width: 100%;
-    height: 100%;
     border: 1px solid #E4DFDC;
     border-radius: 10px;
     outline: none;
     padding-left: 18px;
+    padding-top: 0;
+    padding-bottom: 0;
+    height: 38px;
+    width: 100%;
+    max-width: 346px;
+    margin-right: 25px;
+    resize: none;
+    overflow: hidden;
+    max-height: 550px;
+    overflow-y: auto;
+    padding-top: 7px;
+    padding-bottom: 7px;
+}
+
+.textarea::-webkit-scrollbar {
+    width: 0.1px;
 }
 .inputStyleError {
     border: 1px solid #ff3131;
@@ -23,14 +27,7 @@
 input.inputStyle:focus {
     border: 1.5px solid #7b7a7a;
 }
-label{
-    font-family: 'Ubuntu';
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 18px;
-    align-self: center;
-}
-.subSpan{
-    font-size: 12px;
-    color: #5A5A5A;
+.textareaReplay{
+    height: 27px;
+    max-width: 274px;
 }
