--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -10,13 +10,14 @@
     background-size: 100%;
     background-position: center;
     text-align: end;
+    height: 158px;
+    max-height: 100%;
 }
 .wrap{
     display: flex;
     flex-direction:row;
     justify-content: space-between;
     width: 100%;
-    height: 158px;
     max-height: 100%;
 }
 .heading{
@@ -39,4 +40,11 @@
 .icon{
     height: 29px;
     max-height: 100%;
+}
+.subMenu{
+    height: max-content;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    padding-left: calc((150%/1440)*100);
+    padding-right: calc((150%/1440)*100);
 }
