report:add report 19_12_2022

--- a/src/app/App.css
+++ b/src/app/App.css
@@ -21,6 +21,7 @@
 }
 .formFieldWrap{
     display: flex;
+    flex-direction: row;
     justify-content: space-between;
     margin-top: 10px;
     margin-bottom: 10px;
