--- a/src/app/App.css
+++ b/src/app/App.css
@@ -32,3 +32,9 @@
     max-width: 231px;
     min-height: 39px;
 }
+.formFieldWrapNotification{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    max-width: 231px;
+}
