refactor:layout for button

--- a/src/app/App.css
+++ b/src/app/App.css
@@ -17,7 +17,7 @@
     padding-right: calc((150%/1440)*100);
 }
 .bigButton{
-    height: 38px;
+    min-height: 38px;
 }
 .formFieldWrap{
     display: flex;
