feat:add Personal Data component

--- a/src/app/App.css
+++ b/src/app/App.css
@@ -28,6 +28,9 @@
     width: 100%;
 }
 .inputContainer{
+    display: flex;
+    flex-direction: row;
+    position: relative;
     width: 100%;
     max-width: 231px;
     min-height: 39px;
