--- a/src/components/PersonalData/PersonalData.module.css
+++ b/src/components/PersonalData/PersonalData.module.css
@@ -1,17 +1,11 @@
 .formContainer{
     box-sizing: border-box;
     display: flex;
-    flex-direction: column;
-    width: max-content;
-    height: max-content;
-    padding-right: 59px;
-    padding-left: 39px;
-    padding-top: 24px;
-    padding-bottom: 19px;
-    margin: 10px;
-    box-shadow: 0px 4px 24px rgba(0, 0, 0, 0.14);
-    border-radius: 15px;
-    background-color: #FFFFFF;
+    flex-direction: row;
+
+    width: 100%;
+
+    height: 100%;
 }
 .formFieldWrap{
     display: flex;
@@ -26,14 +20,15 @@
 }
 .buttonContainer{
     width: 100%;
-    max-width: 168px;
-    height: 30px;
+    max-width: 128px;
     margin-top: 33px;
-    align-self: center;
+    align-self: flex-end;
 }
 .formWrap{
     display: flex;
     flex-direction: column;
+    width: 100%;
+    max-width: 368px;
 }
 .textLogin{
     align-self: center;
@@ -47,7 +42,42 @@
 .textLogin>a{
     color:#2D4EC2;
 }
-.inputContainer{
-    /*width: 100%;*/
-    /*max-width: 231px;*/
+.img{
+    margin-left: 8px;
+}
+.button{
+    background-color: transparent;
+    border: transparent;
+    cursor: pointer;
+    font-family: 'Ubuntu';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 16px;
+}
+.avatarContainer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 199px;
+    height: 199px;
+    background-color: #E8E8E8;
+    border-radius: 50%;
+    margin-bottom: 14px;
+
+}
+.formAvatar{
+    display: flex;
+    flex-direction: column;
+    margin-right: calc((16.1%/247)*100);
+}
+
+.editImg {
+    position: absolute;
+    right: 0;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 16px;
+    height: 16px;
+    cursor: pointer;
 }
