--- a/src/components/Textarea/Textarea.module.css
+++ b/src/components/Textarea/Textarea.module.css
@@ -6,7 +6,7 @@
     padding-left: 18px;
     padding-top: 0;
     padding-bottom: 0;
-    height: 38px;
+    height: 100%;
     width: 100%;
     max-width: 346px;
     margin-right: 25px;
