--- a/src/components/Textarea/Textarea.module.css
+++ b/src/components/Textarea/Textarea.module.css
@@ -4,9 +4,11 @@
     border-radius: 10px;
     outline: none;
     padding-left: 18px;
-    padding-top: 0;
-    padding-bottom: 0;
+    padding-top: 14px;
+    padding-bottom: 7px;
     height: 100%;
+    max-height: 100%;
+    min-height: 38px;
     width: 100%;
     max-width: 346px;
     margin-right: 25px;
@@ -14,13 +16,10 @@
     overflow: hidden;
     max-height: 550px;
     overflow-y: auto;
-    padding-top: 7px;
-    padding-bottom: 7px;
     font-family: 'Ubuntu';
-    font-style: normal;
-    font-weight: 400;
     font-size: 16px;
-    line-height: 150%;
+    line-height: 40%;
+
 }
 
 .textarea::-webkit-scrollbar {
