--- a/src/components/Select/Select.module.css
+++ b/src/components/Select/Select.module.css
@@ -4,13 +4,13 @@
     width: 100%;
     min-width: 263px;
     height: 100%;
-    max-height: 39px;
+    min-height: 39px;
 }
 
 .select {
     box-sizing: border-box;
     width: auto;
-    height: inherit;
+    min-height: 39px;
     border: 1px solid #E4DFDC;
     border-radius: 10px;
     outline: none;
