feat: add curcor pointer for full button with img, fix width for input

--- a/src/components/Input/Input.module.css
+++ b/src/components/Input/Input.module.css
@@ -1,7 +1,7 @@
 .inputWrap{
     display: flex;
     flex-direction: column;
-    width: auto;
+    width: 100%;
     height: 100%;
     max-height: 39px;
 }
