--- a/src/components/PopUpAddNews/AddNews/AddNews.module.css
+++ b/src/components/PopUpAddNews/AddNews/AddNews.module.css
@@ -12,6 +12,7 @@
     box-shadow: 0px 4px 24px rgba(0, 0, 0, 0.14);
     border-radius: 15px;
     background-color: #FFFFFF;
+    z-index: 100;
 }
 .logo{
     align-self: center;
