--- a/src/components/NewsItem/NewsItem.module.css
+++ b/src/components/NewsItem/NewsItem.module.css
@@ -24,11 +24,12 @@
 }
 .imgNews{
     position: absolute;
-    width: auto;
-    min-width: 100%;
+    width: 100%;
     height:100%;
-    top:0;
-    right:-60px;
+    object-fit: cover;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 .contentWrap{
     display: flex;
@@ -106,4 +107,13 @@
 .iconStyle{
     height: 30px;
     width: 30px;
+}
+.noImg{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    min-width: 100%;
+    min-height: 100%;
+    background-color: #b3b3b3;
 }
