--- a/src/components/Comment/Comment.module.css
+++ b/src/components/Comment/Comment.module.css
@@ -30,6 +30,10 @@
     font-size: 16px;
     line-height: 150%;
     color: #7E5BC2;
+    border: none;
+    background: none;
+    cursor: pointer;
+    text-decoration-line:underline;
 }
 .footerComment{
     margin-bottom: 24px;
