feat:add return value for add post form

--- a/src/components/PopUpAddNews/AddNews/AddNews.module.css
+++ b/src/components/PopUpAddNews/AddNews/AddNews.module.css
@@ -72,7 +72,8 @@
 .textareaContainer{
     width: 100%;
     max-width: 263px;
-    height: 95px;
+    min-height: 95px;
+    max-height: 295px;
 }
 .buttonContainer{
     width: 100%;
