feat:add api for like/UnLike and delete post

--- a/src/components/NewsItem/NewsItem.module.css
+++ b/src/components/NewsItem/NewsItem.module.css
@@ -90,6 +90,12 @@
 .like{
     width: 21px;
     height: 18px;
+    cursor: pointer;
+}
+.iconStyle{
+    height: 30px;
+    width: 30px;
+    cursor: pointer;
 }
 .wrapper{
     display: flex;
@@ -101,13 +107,8 @@
     display: flex;
     flex-direction: column;
 }
-.commentButton{
 
-}
-.iconStyle{
-    height: 30px;
-    width: 30px;
-}
+
 .noImg{
     display: flex;
     flex-direction: row;
