--- a/src/components/Share/Share.module.css
+++ b/src/components/Share/Share.module.css
@@ -17,10 +17,16 @@
     justify-content: space-between;
 }
 .socialNetwork{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+}
+.socialNetworkContainer{
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
+    position: relative;
     width: 60px;
     height: 60px;
     background: #FBF9FB;
