--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -59,3 +59,21 @@
 .burgerMenuWrap{
     position: relative;
 }
+
+.logOut{
+    width: 100%;
+    height: 24px;
+    padding-bottom: 8px;
+    border-bottom: 1px solid #D9D9D9;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 150%;
+    color: #000000;
+    text-align: left;
+    text-decoration-line: none;
+    margin-top: 8px;
+    cursor: pointer;
+}
+.logOut:nth-last-child(1){
+    border-bottom: none;
+}
