--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -22,6 +22,7 @@
     font-weight: 400;
     font-size: 16px;
     line-height: 24px;
+    text-decoration: none;
 }
 .link:nth-child(1){
     margin-right: 13px;
