feat:add wrap text for full text news

--- a/src/components/NewsItem/NewsItem.module.css
+++ b/src/components/NewsItem/NewsItem.module.css
@@ -79,6 +79,8 @@
     font-size: 16px;
     line-height: 150%;
     color: #858080;
+    line-break: anywhere;
+    word-wrap:break-word;
 }
 .linkNews{
     margin-bottom: 15px;
