--- a/src/components/FilterList/FilterList.module.css
+++ b/src/components/FilterList/FilterList.module.css
@@ -22,6 +22,11 @@
     margin-bottom: 18.5px;
 }
 .filterWrap{
-    max-width: 170px;
-    width: 100%;
+    width: 168px;
+    height: 100%;
+    max-height: 262px;
+    overflow: hidden;
+}
+.checkboxContainer{
+    width: 168px;
 }
