--- a/src/components/FilterList/FilterList.module.css
+++ b/src/components/FilterList/FilterList.module.css
@@ -22,11 +22,28 @@
     margin-bottom: 18.5px;
 }
 .filterWrap{
-    width: 168px;
-    height: 100%;
-    max-height: 262px;
-    overflow: hidden;
+    display: block;
+    min-width: 168px;
 }
 .checkboxContainer{
-    width: 168px;
+    min-width: 168px;
+    height: 100%;
+    max-height: 262px;
+    overflow-y: scroll;
+    overflow-x:hidden;
+}
+.checkboxContainer::-webkit-scrollbar {
+    width: 4px;
+}
+.checkboxContainer::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 1px rgba(0, 0, 0, 0.5);
+}
+.checkboxContainer::-webkit-scrollbar-thumb {
+    height: 12%;
+    border-radius: 4px;
+    background-color: rgba(0, 0, 0, 0.2);
+    outline: 1px solid rgba(0, 0, 0, 0.1);
+}
+.checkmark{
+    word-wrap: break-word;
 }
