--- a/src/components/FilterList/FilterList.module.css
+++ b/src/components/FilterList/FilterList.module.css
@@ -32,10 +32,13 @@
     overflow-y: scroll;
     overflow-x:hidden;
 }
-.checkboxContainer::-webkit-scrollbar {
+.checkboxContainer::-webkit-scrollbar{
+    width: 0px;
+}
+.checkboxContainer:hover.checkboxContainer::-webkit-scrollbar {
     width: 4px;
 }
-.checkboxContainer::-webkit-scrollbar-track {
+.checkboxContainer::-webkit-scrollbar-track{
     box-shadow: inset 0 0 1px rgba(0, 0, 0, 0.5);
 }
 .checkboxContainer::-webkit-scrollbar-thumb {
