--- a/src/components/PersonalData/PersonalData.module.css
+++ b/src/components/PersonalData/PersonalData.module.css
@@ -47,17 +47,26 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    position: relative;
     width: 199px;
     height: 199px;
     background-color: #E8E8E8;
     border-radius: 50%;
     margin-bottom: 14px;
-
+    overflow: hidden;
 }
 .avatar{
+    position: absolute;
     width: 100%;
-    max-width: 199px;
-    height: 199px;
+    height: 100%;
+    object-fit: cover;
+    top:50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+.noAvatar{
+    width: 100%;
+    max-width: 115px;
 }
 .formAvatar{
     display: flex;
