--- a/src/Normalize.css
+++ b/src/Normalize.css
@@ -11,6 +11,7 @@
     margin: 0;
 }
 html {
+    height:100%;
     line-height: 1.15; /* 1 */
     -webkit-text-size-adjust: 100%; /* 2 */
 }
@@ -23,6 +24,7 @@ html {
  */
 
 body {
+    height:100%;
     margin: 0;
 }
 
