--- a/src/components/NewsItem/NewsItem.module.css
+++ b/src/components/NewsItem/NewsItem.module.css
@@ -42,12 +42,13 @@
 }
 .fullContentWrap{
     width: 100%;
+    height: 100%;
 }
+
 .imgNewsFull{
-    width: 100%;
-    max-height: 555px;
-    margin-top: 16px;
-    margin-bottom: 24px;
+    width:100%;
+    height: auto;
+
 }
 .headerInfo{
     display: flex;
