feat:add margin for main content wrap

--- a/src/app/App.css
+++ b/src/app/App.css
@@ -17,6 +17,7 @@
 .contentWrap{
     padding-left: calc((150%/1440)*100);
     padding-right: calc((150%/1440)*100);
+    padding-bottom: 104px;
 }
 .bigButton{
     min-height: 38px;
