refactor: change layout for news item

--- a/src/components/FilterList/FilterList.module.css
+++ b/src/components/FilterList/FilterList.module.css
@@ -22,8 +22,10 @@
     margin-bottom: 18.5px;
 }
 .filterWrap{
+    width: 100%;
     display: block;
-    min-width: 168px;
+    max-width: 168px;
+    margin-right: calc((127px/1440)*100);
 }
 .checkboxContainer{
     min-width: 168px;
