--- a/src/pages/NewsPage/NewsPage.module.css
+++ b/src/pages/NewsPage/NewsPage.module.css
@@ -9,3 +9,13 @@
     justify-content: space-between;
     padding-top: 34px;
 }
+@media screen and (max-width: 700px) {
+    .wrapperPage{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        flex-wrap: wrap;
+        position: relative;
+        padding-top: 34px;
+    }
+}
