feat:add response for head of personal page

--- a/src/components/FilterList/FilterList.module.css
+++ b/src/components/FilterList/FilterList.module.css
@@ -21,11 +21,13 @@
 .filterIcon{
     align-self: flex-start;
     display: none;
+    margin-bottom: 17px;
 }
 @media screen and (max-width: 700px) {
     .filterIcon{
         align-self: flex-end;
         display: block;
+
     }
 }
 .headerFilter{
