--- a/src/components/PersonalData/PersonalData.module.css
+++ b/src/components/PersonalData/PersonalData.module.css
@@ -2,10 +2,18 @@
     box-sizing: border-box;
     display: flex;
     flex-direction: row;
-
     width: 100%;
-
     height: 100%;
+}
+@media screen and (max-width: 360px) {
+    .formContainer{
+        box-sizing: border-box;
+        display: flex;
+        flex-direction: row;
+        width: 100%;
+        max-width: 125px;
+        height: 100%;
+    }
 }
 .formFieldWrap{
     display: flex;
@@ -48,13 +56,16 @@
     justify-content: center;
     align-items: center;
     position: relative;
-    width: 199px;
-    height: 199px;
+    width: 100%;
+    max-width: 199px;
+    height: 100%;
+    max-height: 199px;
     background-color: #E8E8E8;
     border-radius: 50%;
     margin-bottom: 14px;
     overflow: hidden;
 }
+
 .avatar{
     position: absolute;
     width: 100%;
