--- a/src/pages/PersonalPage/PersonalPage.module.css
+++ b/src/pages/PersonalPage/PersonalPage.module.css
@@ -8,7 +8,36 @@
     margin-top: 70px;
     margin-bottom: 48px;
 }
+.headerWrapper h1{
+    font-size: 48px;
+}
+@media screen and (max-width: 360px) {
+    .headerWrapper h1{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        font-size: 24px;
+    }
+}
 .buttonContainer{
     width: 100%;
     max-width: 191px;
+}
+@media screen and (max-width: 360px) {
+    .buttonContainer{
+        width: 100%;
+        max-width: 65px;
+        max-height: 38px;
+    }
+}
+@media(max-width:360px) {
+    .forLargeScreens {
+        display:none;
+    }
+}
+
+@media(min-width:361px) {
+    .forSmallScreens {
+        display:none;
+    }
 }
