--- a/src/components/Button/ButtonIcon/ButtonIcon.module.css
+++ b/src/components/Button/ButtonIcon/ButtonIcon.module.css
@@ -2,6 +2,7 @@
     margin-left: 8px;
 }
 .button{
+    display: flex;
     background-color: transparent;
     border: transparent;
     cursor: pointer;
@@ -10,6 +11,13 @@
     font-weight: 400;
     font-size: 14px;
     line-height: 16px;
+    flex-wrap: nowrap;
+    white-space: nowrap;
+}
+@media screen and (max-width: 360px) {
+    .button{
+        margin-bottom: 14px;
+    }
 }
 .fullButton{
     padding: 8px 15px;
