--- a/src/components/PersonalData/PersonalData.module.css
+++ b/src/components/PersonalData/PersonalData.module.css
@@ -11,7 +11,6 @@
         display: flex;
         flex-direction: row;
         width: 100%;
-        max-width: 125px;
         height: 100%;
     }
 }
@@ -31,6 +30,12 @@
     max-width: 128px;
     margin-top: 33px;
     align-self: flex-end;
+}
+
+@media screen and (max-width: 360px) {
+    .buttonContainer{
+        align-self: flex-start;
+    }
 }
 .formWrap{
     display: flex;
@@ -84,8 +89,14 @@
     flex-direction: column;
     margin-right: calc((16.1%/247)*100);
 }
-
-
+@media screen and (max-width: 360px) {
+    .avatarContainer{
+        width: 100%;
+        min-width: 125px;
+        height: 100%;
+        max-height: 125px;
+    }
+}
 .inputHidden{
     width: 0;
     height: 0;
