feat:add adaptive for popup add news

--- a/src/components/PopUpAddNews/AddNews/AddNews.module.css
+++ b/src/components/PopUpAddNews/AddNews/AddNews.module.css
@@ -14,6 +14,11 @@
     background-color: #FFFFFF;
     z-index: 100;
 }
+@media screen and (max-width: 360px) {
+    .formContainer{
+        max-width: 320px;
+    }
+}
 .logo{
     align-self: center;
     margin-bottom: 21px;
