--- a/src/components/NewsItem/NewsItem.module.css
+++ b/src/components/NewsItem/NewsItem.module.css
@@ -111,6 +111,7 @@
     font-family: 'Ubuntu';
     font-weight: 500;
     line-height: 28px;
+    font-size: 24px;
 }
 .textNews{
     margin-bottom:8px;
