--- a/src/pages/NewsPage/NewsPage.module.css
+++ b/src/pages/NewsPage/NewsPage.module.css
@@ -1,8 +1,9 @@
 .newsContentWrap{
     display: flex;
     flex-direction: column;
-    width: 100%;
-    max-width: 100%;
+    max-width: 845px;
+    min-width: 0px;
+
 }
 @media screen and (max-width: 700px) {
     .newsContentWrap{
