--- a/src/components/Share/Share.module.css
+++ b/src/components/Share/Share.module.css
@@ -10,6 +10,7 @@
     background: #FFFFFF;
     box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.15);
     border-radius: 10px;
+    z-index: 1;
 }
 .shareHead{
     display: flex;
