--- a/src/pages/LoginPage/LoginForm/LoginForm.module.css
+++ b/src/pages/LoginPage/LoginForm/LoginForm.module.css
@@ -2,7 +2,8 @@
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
-    width: max-content;
+    width: 100%;
+    max-width: 527px;
     height: max-content;
     padding-right: 59px;
     padding-left: 39px;
@@ -40,8 +41,6 @@
 .formWrap{
     display: flex;
     flex-direction: column;
-
-   width: 429px;
     max-width: 100%;
 }
 .textLogin{
