refactor: delete any console log and make prettier code

--- a/src/components/FilterList/FilterItem.module.css
+++ b/src/components/FilterList/FilterItem.module.css
@@ -1,7 +1,8 @@
 .container {
     display: block;
     position: relative;
-    font-family: 'Ubuntu';font-weight: 400;
+    font-family: 'Ubuntu';
+    font-weight: 400;
     font-size: 16px;
     line-height: 18px;
     padding-left: 35px;
