--- a/src/components/PopUpAddNews/PopUpAddNews.module.css
+++ b/src/components/PopUpAddNews/PopUpAddNews.module.css
@@ -1,4 +1,4 @@
-.modalContainer{
+.modalContainer {
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -6,12 +6,13 @@
     position: fixed;
     width: 100%;
     height: 100vh;
-    background-color: rgba(0,0,0,0.4);
-    top:0;
+    background-color: rgba(0, 0, 0, 0.4);
+    top: 0;
     left: 0;
     transform: scale(0);
     z-index: 100;
 }
-.active{
+
+.active {
     transform: scale(1);
 }
