--- a/src/components/Menu/Menu.module.css
+++ b/src/components/Menu/Menu.module.css
@@ -11,6 +11,7 @@
     background: #FFFFFF;
     box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.15);
     border-radius: 10px;
+    z-index: 1;
 }
 
 .hidden {
