--- a/src/components/Share/Share.module.css
+++ b/src/components/Share/Share.module.css
@@ -1,16 +1,24 @@
 .shareContainer {
     position: absolute;
+    box-sizing: border-box;
     padding-top: 18px;
-    padding-left: 16px;
-    padding-right: 16px;
+    padding-bottom: 22px;
+    padding-left:  calc((15.5px*4 / 387) * 100);
+    padding-right: calc((15.5px*4 / 387) * 100);
     top: 30px;
     left: 0;
-    width: 387px;
-    height: 240px;
+    width: 100%;
+    max-width: 387px;
+    min-width: 320px;
     background: #FFFFFF;
     box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.15);
     border-radius: 10px;
     z-index: 1;
+}
+@media screen and (max-width: 360px) {
+    .shareContainer {
+        left: -34px;
+    }
 }
 
 .shareHead {
@@ -31,13 +39,29 @@
     justify-content: center;
     align-items: center;
     position: relative;
-    width: 60px;
-    height: 60px;
+    width: 100%;
+    max-width: 60px;
+    min-width: 50px;
+    height: 100%;
+    max-height: 60px;
+    min-height: 50px;
+    margin-right: calc((48px/ 387) * 100);
+    margin-left: calc((48px / 387) * 100);
     background: #FBF9FB;
     border-radius: 50%;
     cursor: pointer;
 }
-
+@media screen and (max-width: 360px) {
+    .shareContainer {
+        left: -34px;
+    }
+}
+.socialNetworkContainer:nth-last-child(1){
+    margin-right: 36px;
+}
+.socialNetworkContainer:nth-child(1){
+    margin-left: 0px;
+}
 .socialNetworkWrap {
     display: flex;
     flex-direction: row;
@@ -49,6 +73,9 @@
     display: flex;
     flex-direction: column;
     margin-top: 29px;
+    width: 100%;
+    max-width: 327px;
+    min-width: 270px;
 }
 
 .shortLink {
