refactor: styles for header

--- a/src/app/App.css
+++ b/src/app/App.css
@@ -6,7 +6,8 @@
 
 .wrapper {
     margin: 0 auto;
-    max-width: 1440px;
+    width: 100%;
+    /*max-width: 1440px;*/
     font-family: Ubuntu;
 }
 
