--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -12,6 +12,8 @@
     background-size: 100%;
     background-position: center;
     text-align: end;
+    width: auto;
+    margin: 0 auto;
     height: 158px;
     max-height: 100%;
 }
@@ -21,6 +23,7 @@
     flex-direction: row;
     justify-content: space-between;
     width: 100%;
+    max-width: 1140px;
     max-height: 100%;
 }
 
