--- a/src/app/App.css
+++ b/src/app/App.css
@@ -20,6 +20,8 @@
 }
 
 .contentWrap {
+    max-width: 1140px;
+
     padding-left: calc((150% / 1440) * 100);
     padding-right: calc((150% / 1440) * 100);
     padding-bottom: 104px;
